fix shadow wrapheader

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
     /* background-color: #1fc8db;
           color: floralwhite; */
     height: 150px;
-    border-bottom: 2px solid rgb(78, 136, 223);
+    /* border-bottom: 2px solid rgb(78, 136, 223); */
     display: table-cell;
     vertical-align: middle;
     text-align: center;
@@ -31,11 +31,11 @@ body {
 }
 
 .gmd {
-    -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-    -moz-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-    -ms-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-    -o-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    -webkit-box-shadow: 0 1px 20px rgba(0, 0, 0, 0.25), 0 5px 20px rgba(0, 0, 0, 0.22);
+    -moz-box-shadow: 0 1px 20px rgba(0, 0, 0, 0.25), 0 5px 20px rgba(0, 0, 0, 0.22);
+    -ms-box-shadow: 0 1px 20px rgba(0, 0, 0, 0.25), 0 5px 20px rgba(0, 0, 0, 0.22);
+    -o-box-shadow: 0 1px 20px rgba(0, 0, 0, 0.25), 0 5px 20px rgba(0, 0, 0, 0.22);
+    box-shadow: 0 1px 20px rgba(0, 0, 0, 0.25), 0 5px 20px rgba(0, 0, 0, 0.22);
 }
 
 .wrapbody {
